--- a/ConsoleApp/App.config
+++ b/ConsoleApp/App.config
@@ -1,10 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="DefaultConnection" 
-         connectionString="Server=(LocalDB)\MSSQLLocalDB; 
-                          Integrated Security=true;
-                          AttachDbFileName=C:\Users\Andri Gunawan\Documents\AdventureWorksLT2012.mdf" />
+    <add name="DefaultConnection"
+         connectionString="Server=(LocalDB)\MSSQLLocalDB;
+         Integrated Security=true;
+         AttachDbFileName=C:\Users\Andri Gunawan\Documents\AdventureWorksLT2012.mdf" />
+    <add name="PavilionConnection"
+         connectionString="Server=(LocalDB)\MSSQLLocalDB;
+         Integrated Security=true;
+         AttachDbFileName=C:\Users\Andri\Documents\AdventureWorksLT2012.mdf" />
+    <add name="OtherConnection"
+         connectionString="Server=(LocalDB)\MSSQLLocalDB;
+         Integrated Security=true;
+         AttachDbFileName=C:\Users\agunawan.BSA\Documents\AdventureWorksLT2012.mdf" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
