Refactor code for readability and use async

--- a/ConsoleApp/App.config
+++ b/ConsoleApp/App.config
@@ -1,14 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="DefaultConnection"
+    <!--<add name="DefaultConnection"
          connectionString="Server=(LocalDB)\MSSQLLocalDB;
          Integrated Security=true;
-         AttachDbFileName=C:\Users\Andri Gunawan\Documents\AdventureWorksLT2012.mdf" />
-    <add name="PavilionConnection"
+         AttachDbFileName=C:\Users\Andri Gunawan\Documents\AdventureWorksLT2012.mdf" />-->
+    <!--<add name="PavilionConnection"
          connectionString="Server=(LocalDB)\MSSQLLocalDB;
          Integrated Security=true;
-         AttachDbFileName=C:\Users\Andri\Documents\AdventureWorksLT2012.mdf" />
+         AttachDbFileName=C:\Users\Andri\Documents\AdventureWorksLT2012.mdf" />-->
+    <add name ="DefaultConnection"
+         connectionString="Server=(LocalDB)\MSSQLLocalDB;
+         Database=AdventureWorksLT2016;
+         Trusted_Connection=True;ConnectRetryCount=0" />    
+    <add name ="PavilionConnection"
+         connectionString="Server=(LocalDB)\MSSQLLocalDB;
+         Database=AdventureWorksLT2016;
+         Trusted_Connection=True;ConnectRetryCount=0" />
     <add name="OtherConnection"
          connectionString="Server=(LocalDB)\MSSQLLocalDB;
          Integrated Security=true;
